# signify

./: .gitignore  DOCUMENTATION_INDEX.md  LICENSE  Makefile  README.md  README.md.backup  mix.exs
bench/: signify_bench.exs  signify_rs_bench.exs
documentation/: GAP_ANALYSIS.md  GUIDES.md  KERI_ARCHITECTURE.md
examples/: load_keri_cesr.exs  sign_and_verify.exs
lib/: signify.ex
lib/signify/: application.ex  cesr.ex  client.ex  credential.ex  habery.ex  keri.ex  native.ex  signer.ex  verfer.ex
lib/signify/keri/events/: event.ex  inception.ex  interaction.ex  rotation.ex
lib/signify/keri/kel/: log.ex
lib/signify/keri/state/: key_state.ex
native/signify_rs/: Cargo.toml  README.md
native/signify_rs/src/: cesr_parser.rs  error.rs  lib.rs  nif.rs
native/signify_rs/src/app/: clienting.rs  controller.rs  credentialing.rs  habery.rs  mod.rs
native/signify_rs/src/core/: cigar.rs  cipher.rs  codes.rs  counter.rs  decrypter.rs  diger.rs  encrypter.rs  eventing.rs  indexer.rs  manager.rs  matter.rs  mod.rs  prefixer.rs  saider.rs  salter.rs  seqner.rs  serder.rs  siger.rs  signer.rs  utils.rs  verfer.rs
native/signify_rs/src/core/indexer/: sizes.rs
scripts/: generate_signify_modules.exs
test/: signify_nif_test.exs  signify_test.exs
test/signify/: cesr_test.exs  credential_test.exs  keri_phase2_test.exs  keri_test.exs
