[package]
name = "signify_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "signify_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["nif"]
nif = []

[dependencies]
# Rustler for Elixir NIF
rustler = "0.34"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }
blake3 = "1.5"
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
sha3 = "0.10"

# Encoding
base64 = "0.22"
hex = "0.4"
cesride = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (async)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
once_cell = "1.19"

# HTTP headers
http = "1.0"
crypto_box = { version = "0.9.1", features = ["seal", "std"] }

[dev-dependencies]
tokio-test = "0.4"
